@@ -1,9 +1,14 @@
 package controller;
 
-import model.Mbti;
+import java.util.Collections;
+import java.util.Map;
+
+import model.Database;
 
 public class MbtiCheck {
 	public static boolean isMatched(String a, String b) {
-        return Mbti.getOrDefault(a, List.of()).contains(b);
+		Database db = new Database();
+		
+        return db.getMbti().getOrDefault(a, Collections.emptyList()).contains(b);
     }
 }
